# VideoCreatePlateform

./: README.md
VideoAndroid/: settings.gradle
VideoAndroid/app/: build.gradle
VideoAndroid/app/src/main/: AndroidManifest.xml
VideoAndroid/app/src/main/assets/: framei420_fragment.glsl  framei420_fragment_fbo.glsl  framei420_vertex.glsl
VideoAndroid/app/src/main/cpp/: CMakeLists.txt
VideoAndroid/app/src/main/cpp/android/: JAndroidImage.cpp  JCameraPreviewRenderer.cpp  JFFMediaPlayer.cpp  JMediaRecordEncoder.cpp  JNativeImage.cpp  JNativeObject.cpp  JVideoRenderer.cpp  JniManager.cpp
VideoAndroid/app/src/main/cpp/comm/: Mutex.h  NativeObjectManager.cpp  NativeObjectManager.h  jnimanager.h  mylog.h  pfr.cpp  pfr.h
VideoAndroid/app/src/main/cpp/ffmpeg/: ffc_comm.h
VideoAndroid/app/src/main/cpp/ffmpeg/include/libavcodec/: avcodec.h  codec.h  codec_desc.h  codec_par.h
VideoAndroid/app/src/main/cpp/ffmpeg/include/libavdevice/: avdevice.h
VideoAndroid/app/src/main/cpp/ffmpeg/include/libavfilter/: buffersrc.h
VideoAndroid/app/src/main/cpp/ffmpeg/include/libavformat/: avformat.h
VideoAndroid/app/src/main/cpp/ffmpeg/include/libavutil/: audio_fifo.h  avutil.h  channel_layout.h  display.h  downmix_info.h  ffversion.h  hdr_dynamic_metadata.h  samplefmt.h
VideoAndroid/app/src/main/cpp/ffmpeg/include/libswresample/: swresample.h
VideoAndroid/app/src/main/cpp/glm/: trigonometric.hpp
VideoAndroid/app/src/main/cpp/glm/detail/: _features.hpp
VideoAndroid/app/src/main/cpp/glm/ext/: matrix_clip_space.hpp  matrix_transform.hpp  quaternion_common.inl  quaternion_exponential.inl  quaternion_transform.hpp  quaternion_trigonometric.hpp  scalar_reciprocal.hpp  vector_reciprocal.hpp
VideoAndroid/app/src/main/cpp/glm/gtx/: compatibility.hpp  euler_angles.hpp  fast_trigonometry.hpp  matrix_decompose.inl  matrix_interpolation.hpp  matrix_transform_2d.hpp  rotate_normalized_axis.hpp  rotate_vector.inl  transform.hpp  transform2.hpp  vector_angle.hpp  vector_angle.inl
VideoAndroid/app/src/main/cpp/interfaces/: JAudioTrack.h  JGLSurfaceView.h  NativeInterface.h  OnFrameRendererCallback.h  OnVideoPlayerCallback.h
VideoAndroid/app/src/main/cpp/media/decoder/: FFCodec.cpp  FFCodec.h  FFCodecAudio.cpp  FFCodecAudio.h  FFCodecVideo.cpp  FFCodecVideo.h  MsgQueue.cpp  MsgQueue.h
VideoAndroid/app/src/main/cpp/media/encoder/: FFMediaEncoder.cpp  FFMediaEncoder.h
VideoAndroid/app/src/main/cpp/media/player/: FFMediaPlayer.cpp  FFMediaPlayer.h
VideoAndroid/app/src/main/cpp/renderer/camerapreview/: CameraPreviewRenderer.cpp  CameraPreviewRenderer.h
VideoAndroid/app/src/main/cpp/renderer/frame/i420frame/: GLI420Frame.cpp  GLI420Frame.h
VideoAndroid/app/src/main/cpp/renderer/image/: AndroidImage.cpp  AndroidImage.h  NativeFrameBuffer.cpp  NativeFrameBuffer.h  NativeImage.cpp  NativeImage.h
VideoAndroid/app/src/main/cpp/renderer/shader/: shader.cpp  shader.h
VideoAndroid/app/src/main/cpp/renderer/videorenderer/: VideoRenderer.cpp  VideoRenderer.h
VideoAndroid/app/src/main/res/color/: home_navigation_label_color_dark.xml  home_navigation_label_color_light.xml  record_mode_label_text_color.xml
VideoAndroid/app/src/main/res/drawable/: bg_gray_button.xml  bg_head_white_border.xml  bg_input.xml  bg_message_blue.xml  bg_search_view.xml  ic_account_edittext_background.xml  ic_add_follow.xml  ic_baseline_arrow_right_24.xml  ic_button2.xml  ic_camera_picture.xml  ic_camera_record_start.xml  ic_camera_record_stop.xml  ic_collect_false.xml  ic_collect_true.xml  ic_gender_female.xml  ic_gender_male.xml  ic_love_false.xml  ic_love_true.xml  ic_record_mode_label_background.xml  ic_remark.xml  ic_search.xml
VideoAndroid/app/src/main/res/drawable-v24/: bg_message_white.xml  bg_rad_button.xml  ic_love_dark.xml
VideoAndroid/app/src/main/res/layout/: activity_captioned.xml  activity_follow.xml  activity_head_set.xml  activity_home.xml  activity_login.xml  activity_main.xml  activity_message.xml  activity_password_set.xml  activity_photo.xml  activity_record.xml  activity_record_test.xml  activity_register.xml  activity_remark.xml  activity_reply.xml  activity_search.xml  (+36 more)
VideoAndroid/gradle/wrapper/: gradle-wrapper.properties
VideoService/: pom.xml
VideoService/src/main/resources/: application.yml
VideoService/src/main/resources/templates/: login.html  template.html
(+300 files in other folders)
